<package>
  <name>planning_msgs</name>
  <version>1.0.0</version>
  <description>planning_msgs</description>
  <maintainer email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</maintainer>

  <license>BSD</license>

  <!--url type="website">http://ros.org/wiki/</url-->
  <url type="bugtracker">https://github.com/ethz-asl/ethzasl_mav_pathplanning/issues</url>

  <author>Markus Achtelik</author>
  <author>Simon Lynen</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
