<?xml version="1.0"?>
<package>
  <name>mav_msgs</name>
  <version>0.0.0</version>
  <description>Package containing messages for communicating with rotary wing MAVs</description>

  <maintainer email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/ethz-asl/mav_comm</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
